# svi-lab

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  refresh.yml
data/: latest.json
scripts/: refresh.py
src/svi_lab/: __init__.py  chain.py  plots.py  ssvi.py  surface.py  svi.py
tests/: test_chain.py  test_ssvi.py  test_svi.py
